# cmd/default_/api_docs/swagger.json
@@ -24,10 +24,10 @@
             "get": {
                 "description": "health check",
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
-                    "other"
+                    "health"
                 ],
                 "summary": "health check",
                 "responses": {
